...
    <string name="overview_meal_edit_description">Edit meal</string>
    <string name="overview_meal_photo_description">Photography of a meal</string>
    <string name="overview_meal_removed_undo_message">Meal removed</string>

    <string name="meal_details_title">Meal details</string>

    <string name="add_meal_title">Add new meal</string>
    <string name="add_meal_save_action">Save</string>
    <string name="add_meal_photo_description">Photography of a meal</string>
    <string name="add_meal_image_select_from_gallery">Select picture from gallery</string>
    <string name="add_meal_image_select_from_camera">Make a picture</string>
    <string name="add_meal_image_select_title">Select picture for your meal</string>
    <string name="add_meal_image_gallery_picker">Select image source</string>
    <string name="add_meal_image_remove">Remove picture</string>
    <string name="add_meal_ingredient_photo_description">Photography of a food ingredient</string>
    <string name="add_meal_ingredient_accept_description">Finish editing ingredient amount</string>
    <string name="add_meal_ingredient_remove_description">Remove this ingredient</string>
    <string name="add_meal_ingredient_amount_hint">Amount i.e 200 g or ml</string>
    <string name="add_meal_ingredients_empty_error">You must add at least one ingredient</string>

    <string name="ingredients_title">Ingredients</string>
    <string name="ingredients_search_title">Search ingredients</string>
    <string name="ingredients_no_ingredients_yet">You haven\'t added any ingredients yet.</string>
    <string name="ingredients_search_result_empty">No matching ingredients found.</string>
    <string name="ingredients_item_edit_ingredient">Edit ingredient</string>
...
