...
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <EditText
            android:id="@+id/add_meal_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            android:lines="1"
            android:maxLines="1"
            android:textSize="20sp"
...
                android:gravity="center_vertical|start"
                android:minHeight="48dp"
                android:text="@string/add_meal_time_desc"
                android:textSize="14sp" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/add_meal_time_value"
                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end|center_vertical"
                android:textAllCaps="false"
                android:textIsSelectable="false"
...
